--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@ p {
       <div class="container-fluid scrollspy" id="schedule"><br>
       <div class="container">
         <div class="row">
-        <div class="col s12 l6">
+        <div class="col s12 l6 m6">
                   <div class="schedule-warp">
                       <div class="day-one">Schedule Febrauary 24 (Friday)</div>
                    <div class="schedule-card">
@@ -620,7 +620,7 @@ p {
           </div>
 
         <!--get in touch-->
-        <div class="col s12 l6 push-l1">
+        <div class="col s12 l6 m6 push-l1 push-m1">
           <h2 class="indigo-text text-darken-4">Get in touch..</h2>
           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
           <ul class="collection hoverable">
@@ -638,7 +638,7 @@ p {
         <div class="container-fluid" id="guest">
             <h2 class="indigo-text text-darken-4 center"><b>SPECIAL GUESTS</b></h2>
             <div class="row">
-                <div class="col s12 l4">
+                <div class="col s12 l4 m4">
                     <div class="box14">
                         <img src="http://bestjquery.com/tutorial/hover-effect/demo122/images/img-1.jpg" alt="">
                         <div class="box-content">
@@ -650,7 +650,7 @@ p {
                         </div>
                     </div>
                 </div>
-                <div class="col s12 l4">
+                <div class="col s12 l4 m4">
                     <div class="box14">
                         <img src="http://bestjquery.com/tutorial/hover-effect/demo122/images/img-2.jpg" alt="">
                         <div class="box-content">
@@ -662,7 +662,7 @@ p {
                         </div>
                     </div>
                 </div>
-                <div class="col s12 l4">
+                <div class="col s12 l4 m4">
                     <div class="box14">
                         <img src="http://bestjquery.com/tutorial/hover-effect/demo122/images/img-3.jpg" alt="">
                         <div class="box-content">
@@ -682,16 +682,16 @@ p {
         <div class="container">
             <h2 class="indigo-text text-darken-4 center"><b>EVENTS SPONSORS</b></h2><br><br>
             <div class="row">
-            <div class="col s6 l3 center-align">
+            <div class="col s6 l3 m3 center-align">
                  <img src="images/wipro.png" alt="" class="responsive-img hoverable" width="160" height="70">
             </div>
-            <div class="col s6 l3 center-align">
+            <div class="col s6 l3 m3 center-align">
                 <img src="images/wipro.png" alt="" class="responsive-img hoverable" width="160" height="70">
             </div>
-            <div class="col s6 l3 center-align">
+            <div class="col s6 l3 m3 center-align">
                 <img src="images/wipro.png" alt="" class="responsive-img hoverable" width="160" height="70">
             </div>
-            <div class="col s6 l3 center-align">
+            <div class="col s6 l3 m3 center-align">
                <img src="images/wipro.png" alt="" class="responsive-img hoverable" width="160" height="70">
             </div>
             </div>
@@ -701,7 +701,7 @@ p {
           <div id="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col s12 l4">
+                    <div class="col s12 l4 m4">
                         <h4 class="white-text"><b>THE TECHNOKRATZ 2K19</b></h4>
                         <hr>
                         <br><br>
@@ -715,42 +715,42 @@ p {
                         <br><br>
                         <a class="waves-effect waves-light btn-large" href="reg.html"><p class="white-text">Register Now</p></a><br><br>
                         <div class="row">
-                            <div class="col s2 l1">
+                            <div class="col s2 l1 m1">
                                 <i class="fa fa-facebook white-text" aria-hidden="true"></i>
                             </div>
-                            <div class="col s2 l1">
+                            <div class="col s2 l1 m1">
                                 <i class="fa fa-instagram white-text" aria-hidden="true"></i>
                             </div>
-                            <div class="col s2 l1">
+                            <div class="col s2 l1 m1">
                                 <i class="fa fa-youtube-play white-text" aria-hidden="true"></i>
                             </div>
                         </div>
                     </div>
-                    <div class="col s12 l4 center-align">
+                    <div class="col s12 l4 m4 center-align">
                       <br>
                         <br><br><br>
                         <img src="images/logo.png" alt="" class="responsive-img">
                         
                     </div>
-                    <div class="col s12 l4 right-align">
+                    <div class="col s12 l4 m4 right-align">
                         <br>
                         <h4 class="white-text"><b>CONTACT US</b></h4>
                           <hr><br>
                           <p class="white-text"><strong>STUDENT COORDINATORS</strong></p><br>
                           <div class="row">
-                            <div class="col s7 l7">
+                            <div class="col s7 l7 m7">
                                 <img src="images/75757856.jpg" alt="" class="circle responsive-img" width="100" height="40">
                             </div>
-                            <div class="col s5 l5 ">
+                            <div class="col s5 l5 m5">
                               <p class="white-text">RAJBABU M</p>
                               <p class="white-text"><i class="tiny material-icons prefix deep blue-text">phone</i>&nbsp;8220374725</p>
                             </div>
                           </div>
                           <div class="row">
-                              <div class="col s7 l7">
+                              <div class="col s7 l7 m7">
                                   <img src="images/75757856.jpg" alt="" class="circle responsive-img" width="100" height="40">
                               </div>
-                              <div class="col s5 l5">
+                              <div class="col s5 l5 m5">
                                 <p class="white-text">RAJBABU M</p>
                                 <p class="white-text"><i class="tiny material-icons prefix deep blue-text">phone</i>&nbsp;8220374725</p>
                               </div>
