--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ p {
               <div class="col s12 l4 m4">
                 <img src="images/pp.jpg" alt="" class="responsive-img materialboxed">
               </div>
-              <div class="col s12 l6 m6 offset-17 push-l1">
+              <div class="col s12 l6 m6 offset-17 offset-m7 push-l1 push-m1">
                 <ul class="tabs">
                   <li class="tab col s6 m6">
                     <a href="#pp" class="indigo-text text-darken-4">About</a>
@@ -354,11 +354,11 @@ p {
                       <a href="#rr1" class="indigo-text text-darken-4">Rules and Regulations</a>
                     </li>
                 </ul>
-                <div class="col s12 offset-l1" id="pp">
+                <div class="col s12 offset-l1 offset-m1" id="pp">
                   <p class="flow-text indigo-text text-darken 4">PAPER PRESENTATION</p>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 </div>
-                <div class="col s12 offset-l1" id="rr1">
+                <div class="col s12 offset-l1 offset-m1" id="rr1">
                     <p class="flow-text indigo-text text-darken 4">RULES AND REGULATIONS</p>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                 </div>
@@ -366,10 +366,10 @@ p {
             </div><hr>
 
             <div class="row right-align">
-              <div class="class col s12 l4 m4 offset-l1 push-l6">
+              <div class="class col s12 l4 m4 offset-l1 offset-m1 push-m6 push-l6">
                   <img src="images/coding.jpg" alt="" class="responsive-img materialboxed">
               </div>
-              <div class="col s12 l6 m6 pull-l5">
+              <div class="col s12 l6 m6 pull-l5 pull-m5">
                   <ul class="tabs">
                     <li class="tab col s6">
                       <a href="#cdng" class="indigo-text text-darken-4">About</a>
@@ -378,11 +378,11 @@ p {
                         <a href="#rr2" class="indigo-text text-darken-4">Rules and Regulations</a>
                       </li>
                   </ul>
-                  <div class="col s12 offset-l1" id="cdng">
+                  <div class="col s12 offset-l1 offset-m1" id="cdng">
                     <p class="flow-text indigo-text text-darken 4">CODING</p>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                   </div>
-                  <div class="col s12 offset-l1" id="rr2">
+                  <div class="col s12 offset-l1 offset-m1" id="rr2">
                       <p class="flow-text indigo-text text-darken 4">RULES AND REGULATIONS</p>
                       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                   </div>
@@ -395,7 +395,7 @@ p {
               <div class="col s12 l4 m4">
                 <img src="images/webde.png" alt="" class="responsive-img materialboxed">
               </div>
-              <div class="col s12 l6 m6 offset-17 push-l1">
+              <div class="col s12 l6 m6 offset-17 offset-m7 push-l1 push-m1">
                   <ul class="tabs">
                     <li class="tab col s6">
                       <a href="#wd" class="indigo-text text-darken-4">About</a>
@@ -404,11 +404,11 @@ p {
                         <a href="#rr3" class="indigo-text text-darken-4">Rules and Regulations</a>
                       </li>
                   </ul>
-                  <div class="col s12 offset-l1" id="wd">
+                  <div class="col s12 offset-l1 offset-m1" id="wd">
                     <p class="flow-text indigo-text text-darken 4">WEB DESIGN</p>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                   </div>
-                  <div class="col s12 offset-l1" id="rr3">
+                  <div class="col s12 offset-l1 offset-m1" id="rr3">
                       <p class="flow-text indigo-text text-darken 4">RULES AND REGULATIONS</p>
                       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                   </div>
@@ -416,10 +416,10 @@ p {
           </div><hr>
 
           <div class="row right-align">
-             <div class="col s12 l4 m4 offset-l1 push-l6">
+             <div class="col s12 l4 m4 offset-l1 offset-m1 push-l6 push-m6">
                 <img src="images/google.png" alt="" class="responsive-img materialboxed">
              </div>
-             <div class="col s12 l6 m6 pull-l5">
+             <div class="col s12 l6 m6 pull-l5 pull-m5">
                 <ul class="tabs">
                   <li class="tab col s6">
                     <a href="#gg" class="indigo-text text-darken-4">About</a>
@@ -428,7 +428,7 @@ p {
                       <a href="#rr4" class="indigo-text text-darken-4">Rules and Regulations</a>
                     </li>
                 </ul>
-                <div class="col s12 offset-l1" id="gg">
+                <div class="col s12 offset-l1 offset-m1" id="gg">
                   <p class="flow-text indigo-text text-darken 4">GOOGLE IT</p>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 </div>
@@ -459,7 +459,7 @@ p {
               <div class="col s12 l4 m4">
                 <img src="images/pp.jpg" alt="" class="responsive-img materialboxed">
               </div>
-              <div class="col s12 l6 m6 offset-17 push-l1">
+              <div class="col s12 l6 m6 offset-17 offset-m7 push-l1 push-m1">
                 <ul class="tabs">
                   <li class="tab col s6">
                     <a href="#1" class="indigo-text text-darken-4">About</a>
@@ -468,11 +468,11 @@ p {
                       <a href="#2" class="indigo-text text-darken-4">Rules and Regulations</a>
                     </li>
                 </ul>
-                <div class="col s12 offset-l1" id="1">
+                <div class="col s12 offset-l1 offset-m1" id="1">
                   <p class="flow-text indigo-text text-darken 4">PAPER PRESENTATION</p>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 </div>
-                <div class="col s12 offset-l1" id="2">
+                <div class="col s12 offset-l1 offset-m1" id="2">
                     <p class="flow-text indigo-text text-darken 4">RULES AND REGULATIONS</p>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                 </div>
@@ -480,10 +480,10 @@ p {
             </div><hr>
 
             <div class="row right-align">
-              <div class="class col s12 l4 m4 offset-l1 push-l6">
+              <div class="class col s12 l4 m4 offset-l1 offset-m1 push-l6 push-m6">
                   <img src="images/coding.jpg" alt="" class="responsive-img materialboxed">
               </div>
-              <div class="col s12 l6 m6 pull-l5">
+              <div class="col s12 l6 m6 pull-l5 pull-m5">
                   <ul class="tabs">
                     <li class="tab col s6">
                       <a href="#3" class="indigo-text text-darken-4">About</a>
@@ -492,7 +492,7 @@ p {
                         <a href="#4" class="indigo-text text-darken-4">Rules and Regulations</a>
                       </li>
                   </ul>
-                  <div class="col s12 offset-l1" id="3">
+                  <div class="col s12 offset-l1 offset-m1" id="3">
                     <p class="flow-text indigo-text text-darken 4">CODING</p>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                   </div>
@@ -509,7 +509,7 @@ p {
               <div class="col s12 l4 m4">
                 <img src="images/webde.png" alt="" class="responsive-img materialboxed">
               </div>
-              <div class="col s12 l6 m6 offset-17 push-l1">
+              <div class="col s12 l6 m6 offset-17 offset-m7 push-m1 push-l1">
                   <ul class="tabs">
                     <li class="tab col s6">
                       <a href="#5" class="indigo-text text-darken-4">About</a>
@@ -518,11 +518,11 @@ p {
                         <a href="#6" class="indigo-text text-darken-4">Rules and Regulations</a>
                       </li>
                   </ul>
-                  <div class="col s12 offset-l1" id="5">
+                  <div class="col s12 offset-l1 offset-m1" id="5">
                     <p class="flow-text indigo-text text-darken 4">WEB DESIGN</p>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                   </div>
-                  <div class="col s12 offset-l1" id="6">
+                  <div class="col s12 offset-l1 offset-m1" id="6">
                       <p class="flow-text indigo-text text-darken 4">RULES AND REGULATIONS</p>
                       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                   </div>
@@ -530,10 +530,10 @@ p {
           </div><hr>
 
           <div class="row right-align">
-             <div class="col s12 l4 m4 offset-l1 push-l6">
+             <div class="col s12 l4 m4 offset-l1 offset-m1 push-l6 push-m6">
                 <img src="images/google.png" alt="" class="responsive-img materialboxed">
              </div>
-             <div class="col s12 l6 m6 pull-l5">
+             <div class="col s12 l6 m6 pull-l5 pull-m5">
                 <ul class="tabs">
                   <li class="tab col s6">
                     <a href="#7" class="indigo-text text-darken-4">About</a>
@@ -542,11 +542,11 @@ p {
                       <a href="#8" class="indigo-text text-darken-4">Rules and Regulations</a>
                     </li>
                 </ul>
-                <div class="col s12 offset-l1" id="7">
+                <div class="col s12 offset-l1 offset-m1" id="7">
                   <p class="flow-text indigo-text text-darken 4">GOOGLE IT</p>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 </div>
-                <div class="col s12 offset-l1" id="8">
+                <div class="col s12 offset-l1 offset-m1 " id="8">
                     <p class="flow-text indigo-text text-darken 4">RULES AND REGULATIONS</p>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                 </div>
