--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ p {
               <div class="col s12 l4 m4">
                 <img src="images/pp.jpg" alt="" class="responsive-img materialboxed">
               </div>
-              <div class="col s12 l6 m6 offset-17 offset-m7 push-l1 push-m1">
+              <div class="col s12 l6 m6 offset-17 push-l1 push-m1">
                 <ul class="tabs">
                   <li class="tab col s6 m6">
                     <a href="#pp" class="indigo-text text-darken-4">About</a>
