--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ p {
               <div class="col s12 l6 m6 offset-17 push-l1 push-m1">
                 <ul class="tabs">
                   <li class="tab col s6 m6">
-                    <a href="#pp" class="indigo-text text-darken-4">About</a>
+                    <a href="#pp" class="indigo-text text-darken-4">Abt</a>
                   </li>
                   <li class="tab col s6 m6">
                       <a href="#rr1" class="indigo-text text-darken-4">Rules and Regulations</a>
