--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ p {
               <div class="col s12 l6 m6 offset-17 push-l1 push-m1">
                 <ul class="tabs">
                   <li class="tab col s6 m6">
-                    <a href="#pp" class="indigo-text text-darken-4">Abt</a>
+                    <a href="#pp" class="indigo-text text-darken-4">About</a>
                   </li>
                   <li class="tab col s6 m6">
                       <a href="#rr1" class="indigo-text text-darken-4">Rules and Regulations</a>
@@ -395,7 +395,7 @@ p {
               <div class="col s12 l4 m4">
                 <img src="images/webde.png" alt="" class="responsive-img materialboxed">
               </div>
-              <div class="col s12 l6 m6 offset-17 offset-m7 push-l1 push-m1">
+              <div class="col s12 l6 m6 offset-17 push-l1 push-m1">
                   <ul class="tabs">
                     <li class="tab col s6">
                       <a href="#wd" class="indigo-text text-darken-4">About</a>
@@ -459,7 +459,7 @@ p {
               <div class="col s12 l4 m4">
                 <img src="images/pp.jpg" alt="" class="responsive-img materialboxed">
               </div>
-              <div class="col s12 l6 m6 offset-17 offset-m7 push-l1 push-m1">
+              <div class="col s12 l6 m6 offset-17 push-l1 push-m1">
                 <ul class="tabs">
                   <li class="tab col s6">
                     <a href="#1" class="indigo-text text-darken-4">About</a>
@@ -509,7 +509,7 @@ p {
               <div class="col s12 l4 m4">
                 <img src="images/webde.png" alt="" class="responsive-img materialboxed">
               </div>
-              <div class="col s12 l6 m6 offset-17 offset-m7 push-m1 push-l1">
+              <div class="col s12 l6 m6 offset-17 push-m1 push-l1">
                   <ul class="tabs">
                     <li class="tab col s6">
                       <a href="#5" class="indigo-text text-darken-4">About</a>
