--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ p {
   <!--about-->
   <div class="container-fluid scrollspy" id="abt">
     <div class="about">
-	          <marquee class="indigo-text"><i>Switch to Desktop site for better visuals</i></marquee>
+	          <marquee class="indigo-text hide-on-med-and-up"><i>Switch to Desktop site for better visuals</i></marquee>
       <p><div class="container center-align">
           Technokratz 2K19 is a National Level Technical Symposium conducted by the Department of Computer Science and Engineering.After the grand success of Technokratz 2K18, we are back with a bang!.Brace yourself, as the most awaited Technokratz 2k19 is all set to rock with cool events in the month of Febrauary. Follow our Facebook and Instagram page for any future updates about the event.</center>
         </p>
