--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@ p {
         <!--get in touch-->
         <div class="col s12 l6 m6 push-l1 push-m1">
           <h2 class="indigo-text text-darken-4">Get in touch..</h2>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+          <p>Feel free to get in touch with us. Join our symposium war with your talents to be part of your visions.</p>
           <ul class="collection hoverable">
             <li class="collection-item hoverable"><i class="tiny material-icons prefix red-text">location_on</i>&nbsp;Anand Institute of Higher Technology</li>
             <li class="collection-item hoverable"><i class="tiny material-icons prefix blue-text">date_range</i>&nbsp;24-02-2019</li>
