--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   {
     width: 100%;
   height: 700px;
-  background-image: url(images/Jshine.jpg);
+  background-image: url(images/JShine.jpg);
   background-size: 100% 100%;
   filter: brightness(10px);
   }
