--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  <title>Technokratz 2k19</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+    <title>Technokratz 2k19</title>
   <style>
   #home
   {
@@ -24,6 +26,14 @@
     position: absolute;
     text-align: center;
     top: 28%;
+    width: 100%;
+    line-height: 1.4em;
+  }
+  .btext1{
+    color: #ffffff;
+    position: absolute;
+    text-align: center;
+    top: 18%;
     width: 100%;
     line-height: 1.4em;
   }
@@ -347,40 +357,48 @@ p {
           </div> </div>-->
           <div class="imgtxt hide-on-med-and-down">
             <ul>
-              <li><img src="images/logo.png" alt="" class="responsive-img" width="200" height="200"></li>
-              <li><h6 class="white-text center-align"><b>PROUDLY PRESENTS</b></h6></li>
+              <li><img src="images/logo.png" alt="" class="responsive-img animated fadeInDown" width="200" height="200"></li>
+              <li><h6 class="white-text center-align animated flash"><b>PROUDLY PRESENTS</b></h6></li>
             </ul>
           </div>
           <div class="imgtxt1 hide-on-large-only hide-on-small-only">
               <ul>
-                <li><img src="images/logo.png" alt="" class="responsive-img" width="200" height="200"></li>
-                <li><h6 class="white-text center-align"><b>PROUDLY PRESENTS</b></h6></li>
+                <li><img src="images/logo.png" alt="" class="responsive-img animated fadeInDown" width="200" height="200"></li>
+                <li><h6 class="white-text center-align animated flash"><b>PROUDLY PRESENTS</b></h6></li>
               </ul>
             </div>
 
-       <div class="btext">
+       <div class="btext hide-on-med-only">
         <div class="col s12 l12 m12">
-        <p><b><h3>TECHNOKRATZ 2K19</h3></b></p>
-        <p>A NATIONAL LEVEL TECHNICAL SYMPOSIUM CONDUCTED BY</p>
-        <p>DEPARTMENT OF COMPUTER SCIENCE AND ENGINEERING</p>
-        <p>ANAND INSTITUTE OF HIGHER TECHNOLOGY</p>
-        <h4><b>FEB 28 2019</b></h4><br><br>
+        <p><b><h3 class="animated zoomIn">TECHNOKRATZ 2K19</h3></b></p>
+        <p class="animated fadeInLeft">A NATIONAL LEVEL TECHNICAL SYMPOSIUM CONDUCTED BY</p>
+        <p class="animated fadeInRight">DEPARTMENT OF COMPUTER SCIENCE AND ENGINEERING</p>
+        <p class="animated fadeInLeft">ANAND INSTITUTE OF HIGHER TECHNOLOGY</p>
+        <h4 class="animated zoomIn"><b>FEB 28 2019</b></h4><br><br>
       </div> </div>
+      <div class="btext1 hide-on-large-only hide-on-small-only">
+          <div class="col s12 l12 m12">
+          <p><b><h3 class="animated zoomIn">TECHNOKRATZ 2K19</h3></b></p>
+          <p class="animated fadeInLeft">A NATIONAL LEVEL TECHNICAL SYMPOSIUM CONDUCTED BY</p>
+          <p class="animated fadeInRight">DEPARTMENT OF COMPUTER SCIENCE AND ENGINEERING</p>
+          <p class="animated fadeInLeft">ANAND INSTITUTE OF HIGHER TECHNOLOGY</p>
+          <h4 class="animated zoomIn"><b>FEB 28 2019</b></h4><br><br>
+        </div> </div>
 
       <div class="ctext hide-on-med-and-down">
         <ul class="center-align">
-          <li><h5 class="white-text">Come with your ideas,</h5></li>
-          <li><h5 class="white-text">Learn More Stuffs,</h5></li>
-          <li><h5 class="white-text">Leave Inspired...</h5></li>
-          <a href="https://www.facebook.com/technokratz2k19" id="fb1" class="waves-effect waves-light btn"><i class="fa fa-facebook white-text" aria-hidden="true"></i></a>&nbsp;<a href="https://www.instagram.com/technokratz2k19/" id="insta1" class="waves-effect waves-light btn"><i class="fa fa-instagram white-text" aria-hidden="true"></i></a>&nbsp;<a href="#" id="yt1" class="waves-effect waves-light btn"><i class="fa fa-youtube-play white-text" aria-hidden="true"></i></a>
+          <li><h5 class="white-text animated fadeInDown">Come with your ideas,</h5></li>
+          <li><h5 class="white-text animated fadeInDown">Learn More Stuffs,</h5></li>
+          <li><h5 class="white-text animated fadeInDown">Leave Inspired...</h5></li>
+          <a href="https://www.facebook.com/technokratz2k19" id="fb1" class="waves-effect waves-light btn animated flash"><i class="fa fa-facebook white-text" aria-hidden="true"></i></a>&nbsp;<a href="https://www.instagram.com/technokratz2k19/" id="insta1" class="waves-effect waves-light btn animated flash"><i class="fa fa-instagram white-text" aria-hidden="true"></i></a>&nbsp;<a href="#" id="yt1" class="waves-effect waves-light btn animated flash"><i class="fa fa-youtube-play white-text" aria-hidden="true"></i></a>
         </ul>
       </div>
       <div class="ctext1 hide-on-large-only hide-on-small-only">
           <ul class="center-align">
-              <li><h5 class="white-text">Come with your ideas,</h5></li>
-              <li><h5 class="white-text">Learn More Stuffs,</h5></li>
-              <li><h5 class="white-text">Leave Inspired...</h5></li>
-            <a href="https://www.facebook.com/technokratz2k19" id="fb1" class="waves-effect waves-light btn"><i class="fa fa-facebook white-text" aria-hidden="true"></i></a>&nbsp;<a href="https://www.instagram.com/technokratz2k19/" id="insta1" class="waves-effect waves-light btn"><i class="fa fa-instagram white-text" aria-hidden="true"></i></a>&nbsp;<a href="#" id="yt1" class="waves-effect waves-light btn"><i class="fa fa-youtube-play white-text" aria-hidden="true"></i></a>
+              <li><h5 class="white-text animated fadeInDown">Come with your ideas,</h5></li>
+              <li><h5 class="white-text animated fadeInDown">Learn More Stuffs,</h5></li>
+              <li><h5 class="white-text animated fadeInDown">Leave Inspired...</h5></li>
+            <a href="https://www.facebook.com/technokratz2k19" id="fb1" class="waves-effect waves-light btn animated flash"><i class="fa fa-facebook white-text animated flash" aria-hidden="true"></i></a>&nbsp;<a href="https://www.instagram.com/technokratz2k19/" id="insta1" class="waves-effect waves-light btn animated flash"><i class="fa fa-instagram white-text" aria-hidden="true"></i></a>&nbsp;<a href="#" id="yt1" class="waves-effect waves-light btn animated flash"><i class="fa fa-youtube-play white-text" aria-hidden="true"></i></a>
           </ul>
         </div>
     </div>
