--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
     width: 100%;
     line-height: 1.4em;
   }
+  .btext2{
+    color: #ffffff;
+    position: absolute;
+    text-align: center;
+    top: 18%;
+    width: 100%;
+    line-height: 1.4em;
+  }
  /* .text-container{
     color: rgb(255, 255, 255,.1);
     
@@ -368,7 +376,7 @@ p {
               </ul>
             </div>
 
-       <div class="btext hide-on-med-only">
+       <div class="btext hide-on-med-only hide-on-small-only">
         <div class="col s12 l12 m12">
         <p><b><h3 class="animated zoomIn">TECHNOKRATZ 2K19</h3></b></p>
         <p class="animated fadeInLeft">A NATIONAL LEVEL TECHNICAL SYMPOSIUM CONDUCTED BY</p>
@@ -384,6 +392,16 @@ p {
           <p class="animated fadeInLeft">ANAND INSTITUTE OF HIGHER TECHNOLOGY</p>
           <h4 class="animated zoomIn"><b>FEB 28 2019</b></h4><br><br>
         </div> </div>
+        <div class="btext2 hide-on-large-only hide-on-med-only">
+            <div class="col s12 l12 m12">
+            <p><b><h3 class="animated zoomIn">TECHNOKRATZ 2K19</h3></b></p>
+            <p class="animated fadeInLeft">A NATIONAL LEVEL TECHNICAL SYMPOSIUM CONDUCTED BY</p>
+            <p class="animated fadeInRight">DEPARTMENT OF COMPUTER SCIENCE AND ENGINEERING</p>
+            <p class="animated fadeInLeft">ANAND INSTITUTE OF HIGHER TECHNOLOGY</p>
+            <h4 class="animated zoomIn"><b>FEB 28 2019</b></h4><br><br>
+            <a href="https://www.facebook.com/technokratz2k19" id="fb1" class="waves-effect waves-light btn animated flash"><i class="fa fa-facebook white-text" aria-hidden="true"></i></a>&nbsp;<a href="https://www.instagram.com/technokratz2k19/" id="insta1" class="waves-effect waves-light btn animated flash"><i class="fa fa-instagram white-text" aria-hidden="true"></i></a>&nbsp;<a href="#" id="yt1" class="waves-effect waves-light btn animated flash"><i class="fa fa-youtube-play white-text" aria-hidden="true"></i></a>
+          </div> </div>
+  
 
       <div class="ctext hide-on-med-and-down">
         <ul class="center-align">
