--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     color: #ffffff;
     position: absolute;
     text-align: center;
-    top: 18%;
+    top: 28%;
     width: 100%;
     line-height: 1.4em;
   }
@@ -399,7 +399,7 @@ p {
             <p class="animated fadeInRight">DEPARTMENT OF COMPUTER SCIENCE AND ENGINEERING</p>
             <p class="animated fadeInLeft">ANAND INSTITUTE OF HIGHER TECHNOLOGY</p>
             <h4 class="animated zoomIn"><b>FEB 28 2019</b></h4><br><br>
-            <a href="https://www.facebook.com/technokratz2k19" id="fb1" class="waves-effect waves-light btn animated flash"><i class="fa fa-facebook white-text" aria-hidden="true"></i></a>&nbsp;<a href="https://www.instagram.com/technokratz2k19/" id="insta1" class="waves-effect waves-light btn animated flash"><i class="fa fa-instagram white-text" aria-hidden="true"></i></a>&nbsp;<a href="#" id="yt1" class="waves-effect waves-light btn animated flash"><i class="fa fa-youtube-play white-text" aria-hidden="true"></i></a>
+            <a href="https://www.facebook.com/technokratz2k19" id="fb1" class="waves-effect waves-light btn animated flash"><i class="fa fa-facebook white-text" aria-hidden="true"></i></a>&nbsp;<a href="https://www.instagram.com/technokratz2k19/" id="insta1" class="waves-effect waves-light btn animated flash"><i class="fa fa-instagram white-text" aria-hidden="true"></i></a>&nbsp;<a href="https://www.youtube.com/channel/UCoB_yN9Z16sR46ivRbIQbpA" id="yt1" class="waves-effect waves-light btn animated flash"><i class="fa fa-youtube-play white-text" aria-hidden="true"></i></a>
           </div> </div>
   
 
@@ -408,7 +408,7 @@ p {
           <li><h5 class="white-text animated fadeInDown">Come with your ideas,</h5></li>
           <li><h5 class="white-text animated fadeInDown">Learn More Stuffs,</h5></li>
           <li><h5 class="white-text animated fadeInDown">Leave Inspired...</h5></li>
-          <a href="https://www.facebook.com/technokratz2k19" id="fb1" class="waves-effect waves-light btn animated flash"><i class="fa fa-facebook white-text" aria-hidden="true"></i></a>&nbsp;<a href="https://www.instagram.com/technokratz2k19/" id="insta1" class="waves-effect waves-light btn animated flash"><i class="fa fa-instagram white-text" aria-hidden="true"></i></a>&nbsp;<a href="#" id="yt1" class="waves-effect waves-light btn animated flash"><i class="fa fa-youtube-play white-text" aria-hidden="true"></i></a>
+          <a href="https://www.facebook.com/technokratz2k19" id="fb1" class="waves-effect waves-light btn animated flash"><i class="fa fa-facebook white-text" aria-hidden="true"></i></a>&nbsp;<a href="https://www.instagram.com/technokratz2k19/" id="insta1" class="waves-effect waves-light btn animated flash"><i class="fa fa-instagram white-text" aria-hidden="true"></i></a>&nbsp;<a href="https://www.youtube.com/channel/UCoB_yN9Z16sR46ivRbIQbpA" id="yt1" class="waves-effect waves-light btn animated flash"><i class="fa fa-youtube-play white-text" aria-hidden="true"></i></a>
         </ul>
       </div>
       <div class="ctext1 hide-on-large-only hide-on-small-only">
@@ -416,7 +416,7 @@ p {
               <li><h5 class="white-text animated fadeInDown">Come with your ideas,</h5></li>
               <li><h5 class="white-text animated fadeInDown">Learn More Stuffs,</h5></li>
               <li><h5 class="white-text animated fadeInDown">Leave Inspired...</h5></li>
-            <a href="https://www.facebook.com/technokratz2k19" id="fb1" class="waves-effect waves-light btn animated flash"><i class="fa fa-facebook white-text animated flash" aria-hidden="true"></i></a>&nbsp;<a href="https://www.instagram.com/technokratz2k19/" id="insta1" class="waves-effect waves-light btn animated flash"><i class="fa fa-instagram white-text" aria-hidden="true"></i></a>&nbsp;<a href="#" id="yt1" class="waves-effect waves-light btn animated flash"><i class="fa fa-youtube-play white-text" aria-hidden="true"></i></a>
+            <a href="https://www.facebook.com/technokratz2k19" id="fb1" class="waves-effect waves-light btn animated flash"><i class="fa fa-facebook white-text animated flash" aria-hidden="true"></i></a>&nbsp;<a href="https://www.instagram.com/technokratz2k19/" id="insta1" class="waves-effect waves-light btn animated flash"><i class="fa fa-instagram white-text" aria-hidden="true"></i></a>&nbsp;<a href="https://www.youtube.com/channel/UCoB_yN9Z16sR46ivRbIQbpA" id="yt1" class="waves-effect waves-light btn animated flash"><i class="fa fa-youtube-play white-text" aria-hidden="true"></i></a>
           </ul>
         </div>
     </div>
