--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ p {
 
        <div class="btext hide-on-med-only hide-on-small-only">
         <div class="col s12 l12 m12">
-        <p><b><h3 class="animated zoomIn">TECHNOKRATZ 2K19</h3></b></p>
+        <p><b><h3 class="animated zoomIn yellow-text">TECHNOKRATZ 2K19</h3></b></p>
         <p class="animated fadeInLeft">A NATIONAL LEVEL TECHNICAL SYMPOSIUM CONDUCTED BY</p>
         <p class="animated fadeInRight">DEPARTMENT OF COMPUTER SCIENCE AND ENGINEERING</p>
         <p class="animated fadeInLeft">ANAND INSTITUTE OF HIGHER TECHNOLOGY</p>
@@ -386,7 +386,7 @@ p {
       </div> </div>
       <div class="btext1 hide-on-large-only hide-on-small-only">
           <div class="col s12 l12 m12">
-          <p><b><h3 class="animated zoomIn">TECHNOKRATZ 2K19</h3></b></p>
+          <p><b><h3 class="animated zoomIn yellow-text">TECHNOKRATZ 2K19</h3></b></p>
           <p class="animated fadeInLeft">A NATIONAL LEVEL TECHNICAL SYMPOSIUM CONDUCTED BY</p>
           <p class="animated fadeInRight">DEPARTMENT OF COMPUTER SCIENCE AND ENGINEERING</p>
           <p class="animated fadeInLeft">ANAND INSTITUTE OF HIGHER TECHNOLOGY</p>
@@ -394,7 +394,7 @@ p {
         </div> </div>
         <div class="btext2 hide-on-large-only hide-on-med-only">
             <div class="col s12 l12 m12">
-            <p><b><h3 class="animated zoomIn">TECHNOKRATZ 2K19</h3></b></p>
+            <p><b><h3 class="animated zoomIn yellow-text">TECHNOKRATZ 2K19</h3></b></p>
             <p class="animated fadeInLeft">A NATIONAL LEVEL TECHNICAL SYMPOSIUM CONDUCTED BY</p>
             <p class="animated fadeInRight">DEPARTMENT OF COMPUTER SCIENCE AND ENGINEERING</p>
             <p class="animated fadeInLeft">ANAND INSTITUTE OF HIGHER TECHNOLOGY</p>
